[project]
name = "ml-experiments"
version = "0.1.0"
description = "Experiments with ML frameworks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "micrograd==0.1.0",
    "scikit-learn>=1.8.0",
]
